--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 @import 'normalize';
 @import 'components/all';
+@import 'pages/all';
 
 body {
   position: relative;
@@ -7,322 +8,3 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.background-pic {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  // min-height: 100vh;
-  min-height: calc(100vh - 100px);
-  z-index: -2;
-  background-image: url('../assets/background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position-y: bottom;
-  background-position-x: center;
-  background-color: black;
-}
-
-.main-page {
-  text-align: center;
-  padding: 25vh 5%;
-
-  h1 {
-    font-weight: 900;
-    font-size: 25px;
-    color: white;
-  }
-
-  h3 {
-    font-weight: 500;
-    font-size: 16px;
-    margin: 30px 0 50px;
-    color: white;
-  }
-
-  @media (min-width: 768px) {
-    padding: 20vh 15%;
-
-    h1 {
-      font-size: 45px;
-    }
-  
-    h3 {
-      font-size: 30px;
-      margin: 40px 0 80px;
-    }
-  }
-
-  @media (min-width: 1300px) {
-    padding: 20vh 20%;
-
-    h1 {
-      font-size: 64px;
-    }
-  
-    h3 {
-      font-size: 36px;
-    }
-  }
-}
-
-.movie-page__header {
-  text-align: center;
-  padding: 25px 50px;
-  background-color: black;
-
-  @media (min-width: 768px) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 70px;
-  }
-
-  @media (min-width: 1300px) {
-    padding: 25px 150px;
-    // padding: 35px 150px;
-  }
-}
-
-.movie-page__header-link {
-  display: block;
-  color: #fefefe;
-  font-size: 24px;
-  font-weight: 300;
-  margin-bottom: 20px;
-
-  @media (min-width: 768px) {
-    margin-bottom: 0;
-  }
-}
-
-.main-block {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-height: calc(100vh - 100px);
-  padding: 60px 20px 40px;
-
-  @media (min-width: 768px) {
-    padding: 100px;
-  }
-
-  @media (min-width: 1300px) {
-    padding: 120px 150px 100px;
-  }
-}
-
-.background-gradient {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  background: linear-gradient(90.3deg, #111111 19%, rgba(17, 17, 17, 0) 99.75%);
-}
-
-.main-block__wrapper {
-  @media (min-width: 768px) {
-    max-width: 85%;
-  }
-
-  @media (min-width: 1300px) {
-    max-width: 50%;
-  }
-}
-
-.main-block__title {
-  font-size: 35px;
-  font-weight: 900;
-  margin-bottom: 30px;
-  color: white;
-
-  @media (min-width: 768px) {
-    font-size: 72px;
-  }
-}
-
-.main-block__inner {
-  display: flex;
-  align-items: center;
-}
-
-.main-block__rating-bg {
-  display: flex;
-  align-items: center;
-  padding: 7px 12px 8px;
-  background-color: #fac539;
-  border-radius: 8px;
-  min-width: 83px;
-  max-width: 90px;
-  margin-right: 10px;
-
-  @media (min-width: 768px) {
-    margin-right: 24px;
-  }
-}
-
-.main-block__rating {
-  font-weight: 900;
-  font-size: 12px;
-}
-
-.main-block__genre,
-.main-block__type,
-.main-block__year {
-  font-size: 15px;
-  font-weight: 600;
-  color: white;
-
-  @media (min-width: 768px) {
-    font-size: 24px;
-  }
-}
-
-.main-block__genre {
-  padding: 0 10px;
-
-  @media (min-width: 768px) {
-    padding: 0 24px;
-  }
-}
-
-.main-block__type {
-  padding: 0 10px;
-  position: relative;
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    top: 3px;
-    height: 18px;
-    width: 2px;
-    background-color: #ffffff;
-  }
-
-  &::before {
-    left: 0;
-  }
-
-  &::after {
-    right: 0;
-  }
-
-  @media (min-width: 768px) {
-    padding: 0 24px;
-
-    &::before,
-    &::after {
-      height: 24px;
-    }
-  }
-}
-
-.main-block__year {
-  padding-left: 10px;
-
-  @media (min-width: 768px) {
-    padding-left: 24px;
-  }
-}
-
-.main-block__wrap {
-  margin-top: auto;
-
-  @media (min-width: 768px) {
-    max-width: 70%;
-  }
-
-  @media (min-width: 1300px) {
-    max-width: 40%;
-  }
-}
-
-.main-block__video-link {
-  display: block;
-  max-width: 200px;
-  margin-bottom: 50px;
-  font-size: 18px;
-  font-weight: 600;
-  padding: 23px 69px;
-  color: white;
-  border: 2px solid white;
-  border-radius: 40px;
-}
-
-.main-block__awards {
-  font-size: 15px;
-  font-weight: 600;
-  color: white;
-
-  @media (min-width: 768px) {
-    font-size: 18px;
-  }
-}
-
-.description-block {
-  padding: 40px 30px;
-
-  @media (min-width: 768px) {
-    padding: 60px 70px;
-  }
-
-  @media (min-width: 1300px) {
-    padding: 60px 150px;
-  }
-}
-
-.description-block__wrapper {
-  max-width: 85%;
-
-  @media (min-width: 1300px) {
-    max-width: 70%;
-  }
-}
-
-.description-block__title {
-  font-size: 36px;
-  line-height: 52px;
-  font-weight: 900;
-  margin-bottom: 30px;
-  color: #323232;
-}
-
-.description-block__text {
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 400;
-  margin-bottom: 60px;
-  color: #323232;
-}
-
-.similar-block__title {
-  font-size: 24px;
-  line-height: 52px;
-  font-weight: 900;
-  margin-bottom: 19px;
-  color: #323232;
-}
-
-.similar-block__wrapper {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.movie-page__footer {
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 39px;
-
-  p {
-    font-size: 18px;
-    font-weight: 900;
-    color: white;
-  }
-}
