--- a/src/scss/components/search.scss
+++ b/src/scss/components/search.scss
@@ -1,10 +1,37 @@
-.search {
+.light-search {
   display: flex;
   justify-content: center;
+  margin: 0 auto;
+  max-width: 555px;
 }
 
-.search__input,
-.search__button {
+.dark-search {
+  display: flex;
+  justify-content: flex-end;
+  max-width: 420px;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 8px;
+    left: 14px;
+    height: 20px;
+    width: 20px;
+    z-index: 2;
+    background: url('../../assets/search.svg') no-repeat center;
+  }
+
+  @media (min-width: 768px) {
+    &:after {
+      top: 15px;
+      left: 25px;
+    }
+  }
+}
+
+.light-search__input,
+.light-search__button {
   font-size: 16px;
   padding: 10px 20px;
   border: none;
@@ -15,7 +42,7 @@
   }
 }
 
-.search__input {
+.light-search__input {
   width: 60%;
   font-weight: 400;
   border-radius: 30px 0 0 30px;
@@ -25,10 +52,30 @@
   }
 }
 
-.search__button {
+.light-search__button {
   background-color: #4ea7f9;
   color: white;
   font-weight: 700;
   cursor: pointer;
   border-radius: 0 30px 30px 0;
+}
+
+.dark-search__input {
+  width: 100%;
+  font-size: 16px;
+  padding: 10px 20px 10px 40px;
+  border: none;
+  font-weight: 400;
+  border-radius: 30px;
+  background-color: #1b1919;
+  color: white;
+
+  @media (min-width: 768px) {
+    font-size: 18px;
+    padding: 14px 28px 14px 68px;
+  }
+}
+
+.dark-search__button {
+  display: none;
 }
