добавила открытие карточки

--- a/src/scss/components/movie.scss
+++ b/src/scss/components/movie.scss
@@ -125,8 +125,8 @@
   &::after {
     content: '';
     position: absolute;
-    top: 1px;
-    height: 16px;
+    top: 0;
+    bottom: 0;
     width: 1px;
     background-color: #ffffff;
   }
