--- a/src/scss/pages/moviePage.scss
+++ b/src/scss/pages/moviePage.scss
@@ -72,16 +72,6 @@
   background: linear-gradient(90.3deg, #111111 19%, rgba(17, 17, 17, 0) 99.75%);
 }
 
-.main-block__wrapper {
-  @media (min-width: 768px) {
-    max-width: 85%;
-  }
-
-  @media (min-width: 1300px) {
-    max-width: 50%;
-  }
-}
-
 .main-block__title {
   font-size: 35px;
   font-weight: 900;
@@ -89,7 +79,12 @@
   color: white;
 
   @media (min-width: 768px) {
+    max-width: 85%;
     font-size: 72px;
+  }
+
+  @media (min-width: 1300px) {
+    max-width: 50%;
   }
 }
 
@@ -147,8 +142,8 @@
   &::after {
     content: '';
     position: absolute;
-    top: 3px;
-    height: 18px;
+    top: 0;
+    bottom: 0;
     width: 2px;
     background-color: #ffffff;
   }
