--- a/src/scss/components/similar.scss
+++ b/src/scss/components/similar.scss
@@ -49,7 +49,9 @@
     background-color: rgba(0, 0, 0, 0.8);
 
     .similar__info-block {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
     }
   }
 }
@@ -61,9 +63,8 @@
 
 .similar__title {
   display: flex;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 800;
-  max-width: 90%;
   margin-bottom: 8px;
   color: white;
 
@@ -91,4 +92,20 @@
   font-weight: 400;
   margin-bottom: 16px;
   color: white;
+}
+
+.similar__rating-bg {
+  display: flex;
+  align-items: center;
+  padding: 7px 12px 8px;
+  background-color: #fac539;
+  border-radius: 8px;
+  min-width: 83px;
+  max-width: 90px;
+  margin-top: auto;
+}
+
+.similar__rating {
+  font-weight: 900;
+  font-size: 12px;
 }
