--- a/src/scss/pages/moviePage.scss
+++ b/src/scss/pages/moviePage.scss
@@ -79,12 +79,11 @@
   color: white;
 
   @media (min-width: 768px) {
-    max-width: 85%;
-    font-size: 72px;
+    font-size: 70px;
   }
 
   @media (min-width: 1300px) {
-    max-width: 50%;
+    max-width: 85%;
   }
 }
 
@@ -186,8 +185,7 @@
   }
 }
 
-.main-block__video-link {
-  display: block;
+.main-block__video-btn {
   max-width: 200px;
   margin-bottom: 50px;
   font-size: 18px;
@@ -196,18 +194,16 @@
   color: white;
   border: 2px solid white;
   border-radius: 40px;
+  background-color: transparent;
+  cursor: pointer;
 
   &:hover {
     transform: scale(0.98);
   }
-}
 
-.isDisabled {
-  opacity: 0.5;
-  pointer-events: none;
-
-  &:hover .main-block__video-link {
-    transform: none;
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
   }
 }
 
