--- a/src/scss/components/search.scss
+++ b/src/scss/components/search.scss
@@ -59,6 +59,7 @@
   cursor: pointer;
   border-radius: 0 30px 30px 0;
   transition: 0.5s all;
+  -webkit-appearance:none;
 
   &:focus,
   &:hover {
