добавила поиск на странице фильма

--- a/src/scss/pages/moviePage.scss
+++ b/src/scss/pages/moviePage.scss
@@ -27,6 +27,11 @@
   }
 }
 
+.movie-page__header-link--search {
+  width: 100%;
+  height: 100%;
+}
+
 .main-block {
   position: relative;
   display: flex;
