переписала получение данных с сервера

--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,4 +1,8 @@
-@import './search';
+@import './errorMessage';
+@import './footer';
+@import './header';
 @import './movie';
-@import './similar';
+@import './notFound';
 @import './popupTrailer';
+@import './search';
+@import './similar';
